[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-healer"
version = "0.1.0"
description = "Standalone multi-repo autonomous healing service for GitHub repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.52",
]
dev = [
  "pytest>=8.0",
  "playwright>=1.52",
]

[project.scripts]
flow-healer = "flow_healer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flow_healer = ["dashboard_static/index.html", "dashboard_static/assets/*.css", "dashboard_static/assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
