[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-healer-python-fastapi-sandbox"
version = "1.0.0"
description = "FastAPI-style todo sandbox app for Flow Healer stress tests."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
